BUG-DFC-13095  Exam results helpline | Show message link overlaps information icon on smaller screens
Further css updates in following toolkits
1. gds_toolkit
2. gds_service_toolkit

--- a/src/gds_toolkit/assets/src/frontend/sass/includes/_custom.scss
+++ b/src/gds_toolkit/assets/src/frontend/sass/includes/_custom.scss
@@ -134,10 +134,14 @@
           margin-left:50px;
           position: relative !important;
           margin-top: 10px !important;
+          float:left;
 
           &:focus {
             float:left;
           }
+        }
+        .govuk-warning-text__icon {
+          top: 55%;
         }
       }
     }
